fix(sandbox): address Codex adversarial review findings (Phase 3.5)
Three blocking defects flagged by the Phase 3 review:

1. [critical] Java compilation failed against :ro mount
   The dispatcher ran 'javac -d .' from inside the :ro /job mount,
   which made every Java D-form submission return Runtime Error.
   Moved compilation to /tmp/classes (writable) and prepended it
   on the runtime classpath. Also pass -Djava.security.manager=allow
   so the harness can install its SecurityManager on JDK 18+.

2. [critical] C and C++ D-form dispatch never reached a harness
   The C/C++ dispatchers in dFormDispatchShell() compiled user source
   and ran the binary, but the harness images at
   docker/sandbox/harness/{c,cpp}/ are still Phase 1 smoke skeletons
   that don't read input.json. Enabling D-form would silently
   break C/C++ judging for users whose Solution is the typical
   library-style code (no main()). Trimmed
   DFORM_SUPPORTED_LANGUAGES to {java, python} for now; C/C++ re-add
   with a follow-up that ships envelope-producing harnesses.

3. [high] waitFor-before-read pipe deadlock
   Both executeInSandboxD and executeBatchD called process.waitFor()
   before process.getInputStream().readAllBytes(). With merged-error
   stdout, the kernel pipe is only 64 KiB; a batch envelope with
   100 cases × (verdict + 64 KiB user_stdout) easily exceeds that,
   and the harness blocks on write() while the backend blocks on
   waitFor() — false TLE for otherwise valid runs.

   New runDProcess() helper spawns a daemon reader thread that
   drains the merged pipe into a bounded ByteArrayOutputStream
   (DFORM_OUTPUT_BUDGET_BYTES = 8 MiB + 128 KiB headroom). The
   reader closes the InputStream on budget overflow so the harness
   unblocks. waitFor joins the reader with a 2s grace window.
   BOTH single-case and batch dispatch now go through runDProcess.

Verification: 36/36 sandbox tests pass (CodeExecutionHelperImpl 11,
SandboxServiceImpl 20, CodeExecutionService 5).